tests/valid_inputs/array_access_const.cpp



int main() {
	int a[5];
	a[2] = 42;
	return a[2];
}
