tests/invalid_inputs/sema/const_elem_array_write.cpp

int main() {
	const int a[5];
	a[2] = 42;
	return a[2];
}
